k8s/IngressRoutes/4-ingressroutetcp-rancher.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: connectora
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`connectora.platform.flexigrobots-h2020.eu`)
    services:
    - name: connectora
      namespace: ids-2
      port: 8080
    # middlewares:
    #   - name: foo-ip-whitelist
    #     namespace: ids-2
  tls:
    #certResolver: default
    passthrough: true 
---

# apiVersion: traefik.containo.us/v1alpha1
# kind: MiddlewareTCP 
# metadata:
#   name: test-ipwhitelist
#   namespace: ids-2
# spec:
#   ipWhiteList:
#     sourceRange:
#       - 127.0.0.1/32
#       - 213.227.145.187 
#       - 172.26.64.1
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: connectorb
  namespace: ids-2
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`connectorb.platform.flexigrobots-h2020.eu`)
    services:
    - name: connectorb
      port: 8081
  tls:
    certResolver: default
    passthrough: true
